Tue Nov 28 08:09:35 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/run_test.pl: added some more diagnostics to try
          to figure out why run_tests.sh can't be exec'd on
          UCI machines.

Mon Nov 27 17:02:42 2000  Darrell Brunsch <brunsch@uci.edu>

        * ACE-INSTALL.html:

          While checking to make sure I did remove all references to
          .mdp files, I noticed that some of the Win32 instructions
          could use some updating.

Mon Nov 27 17:44:52 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/run_test.pl: if run_tests.sh doesn't exist, print
          a diagnostic message and continue with the run_test.pl
          version of the tests.  For unknown reasons, this change:
          Mon Nov 27 11:58:43 2000  David L. Levine <levine@cs.wustl.edu>
          doesn't work on the UCI Linux machines, run_tests.sh can't
          be exec'd.

Mon Nov 27 10:17:58 2000  Ossama Othman  <ossama@uci.edu>

        * docs/tutorials/005/005.dsp:

          Corrected name of output binary.  It should have been
          `server.exe' not `client.exe'.  Thanks to David Channon
          <djc@uq.net.au> for reporting this problem.

Mon Nov 27 09:56:09 2000  Ossama Othman  <ossama@uci.edu>

        The following updates are based on feedback from David Channon
        <djc@uq.net.au>.  Thanks David!

        * docs/tutorials/003/client.cpp:
        * docs/tutorials/003/page01.html:
        * docs/tutorials/004/client.cpp:
        * docs/tutorials/004/page01.html:
        * docs/tutorials/008/broadcast_client.cpp:
        * docs/tutorials/008/directed_client.cpp:
        * docs/tutorials/008/page02.html:
        * docs/tutorials/008/page03.html:
        * docs/tutorials/008/page04.html:
        * docs/tutorials/008/server.cpp:
        * docs/tutorials/009/broadcast_client.cpp:
        * docs/tutorials/009/directed_client.cpp:
        * docs/tutorials/009/page02.html:
        * docs/tutorials/009/page03.html: